# hello_sqlx

./: .gitignore  Cargo.toml  build.sh
.github/workflows/: build.yml
src/: connection_info.rs  main.rs  user.rs
