[package]
name = "hello_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 'z'